feat: JWT 보안 체인 강화